--- a/src/main/resources/templates/views/biz/ins/BIZINS001M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS001M0.html
@@ -47,7 +47,7 @@
 									</select>
 								</div>
 								<div class="col-auto">
-									<button type="button" class="btn btn-primary search-button p-1" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
+									<button type="button" class="btn btn-primary search-button p-1" style="padding: 4px 10px; color: white; font-size: 13px" onclick="getSearch()">Search</button>
 								</div>
 								<div class="col text-end">
 									<p style="height:27px;">&nbsp;</p>
@@ -227,16 +227,42 @@
 			}
 		};
 		
-		function main() {
-			// 그리드 초기화 및 데이터 로드
-			console.log("Initializing SlickGrid...");
-			var inputStdYymm = getStdYymm();
-			getList(
-						(input = JSON.stringify({ 
-												  stdYymm: inputStdYymm 
-						}))
-				   );
-		}
+        function main() {
+            // 그리드 초기화 및 데이터 로드
+            console.log("Initializing SlickGrid...");
+            var inputStdYymm = getStdYymm();
+            getList(
+                        (input = JSON.stringify({ 
+                                                  stdYymm: inputStdYymm
+                        }))
+                   );
+        }
+
+        function getSearch() {
+            // 그리드 초기화 및 데이터 로드
+            console.log("Initializing SlickGrid...");
+            var inputStdYymm = getStdYymm();
+            
+			if ( $("#inputMonth").val() === "" && $("#inputYear").val() === "") {
+				alert("Please select a year, month!");
+				return;
+			} else if ($("#inputYear").val() === "") {
+				alert("Please select a year to continue!");
+				return;
+			} else if ($("#inputMonth").val() === "") {
+				alert("Please select a month to continue!");
+				return;
+			} 
+			
+			const element = document.getElementById("divMyGrid");
+			element.innerHTML = "";
+			
+            getList(
+                        (input = JSON.stringify({ 
+                                                  stdYymm: inputStdYymm
+                        }))
+                   );
+        }    
 
 		/**
 		 * Transaction callback 함수
