--- a/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
@@ -50,7 +50,7 @@
 									<label class="form-label"> Program ID/Name: </label> <input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="Program ID/Name" />
 								</div>
 								<div class="col-auto">
-									<button type="button" class="btn btn-primary search-button p-1" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
+									<button type="button" class="btn btn-primary search-button p-1" style="padding: 4px 10px; color: white; font-size: 13px" onclick="getSearch()">Search</button>
 								</div>
 								<div class="col text-end flex-direction:row">
 									<p style="height:27px;">&nbsp;</p>
@@ -202,6 +202,12 @@
 		function getStdYymm(){
 			var inputYear = $("#inputYear").val();
 			var inputMonth = $("#inputMonth").val();
+			
+			// inputYear나 inputMonth가 비어있는지 체크
+		    if (!inputYear || !inputMonth) {
+		        return null; // 년도나 월이 비어 있으면 null을 반환
+		    }
+			
 			var inputStdYymm = inputYear + ((inputMonth.length != 0) ? inputMonth.padStart(2, "0"): "");
 			if (inputStdYymm.length != 6){
 				inputStdYymm = null;
@@ -212,19 +218,31 @@
 		function main() {
 			// 그리드 초기화 및 데이터 로드
 			console.log("Initializing SlickGrid...");
-			const element = document.getElementById("divMyGrid");
-			element.innerHTML = "";
+			getList(
+					(input	=	JSON.stringify({ 
+													searchTxt	: $("#inpSearchTxt").val()
+												,	exePrdList	: getCycleFromYymm(getStdYymm())
+												}) 
+					)
+				);
+		}
+		
+		function getSearch() {
+			// 그리드 초기화 및 데이터 로드
+			console.log("Initializing SlickGrid...");
 
 			if ( $("#inputMonth").val() === "" && $("#inputYear").val() === "") {
 				alert("Please select a year, month!");
-			return false;
+				return;
 			} else if ($("#inputYear").val() === "") {
 				alert("Please select a year to continue!");
-			return false;
+				return;
 			} else if ($("#inputMonth").val() === "") {
 				alert("Please select a month to continue!");
-			return false;
+				return;
 			} 
+			const element = document.getElementById("divMyGrid");
+			element.innerHTML = "";
 			
 			getList(
 					(input	=	JSON.stringify({ 
