wrkbat002 search comment

--- a/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
@@ -13,7 +13,7 @@
 							<div class="row">
 								<!-- Year Select -->
 								<div class="col-auto">
-									<label class="form-label"> Year: </label>
+									<label class="form-label">Standard Year/Month:</label>
 									<select name="user[year]" class="form-select select-month-year p-1" id="inputYear">
 										<option selected value="">- Year -</option>
 										<!-- Year Options -->
@@ -28,7 +28,7 @@
 								</div>
 								<!-- Month Select -->
 								<div class="col-auto">
-									<label class="form-label"> Month: </label>
+									<label class="form-label"> &nbsp; </label>
 									<select name="user[month]" class="form-select select-month-year p-1" id="inputMonth">
 										<option selected value="">- Month -</option>
 										<!-- Month Options -->
