edit-cell null alert

--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -384,20 +384,27 @@
 			var activeCell = grid.getActiveCell();
 			console.log("activeCell:", activeCell);
 
-			// get the active cell index
+			// 선택된 cell이 없을 경우
+			if (!activeCell) {
+				alert("Please select a cell to edit the data.");
+			return;
+			}
+			
+			//get the active cell index
 			let activeCellIndex = activeCell.cell;
 
-			let column = grid.getColumns()[activeCellIndex];
+			//let column = grid.getColumns()[activeCellIndex];
 
 			// setting the active row to the first row if the active row is undefined
 			var activeRow = (activeCell && activeCell.row) || 0;
 			const dataContext = grid.getDataItem(activeRow);
 
 			// alert for the edit popup if the user doesn't select the column value in the grid
+			/*
 			if ((modalType === "edit" && !dataContext) || !activeCell || !column) {
 				alert("Please select a cell to edit the data.");
 			return;
-			}
+			} */
 
 			if (!options.enableCellNavigation) {
 				throw new Error('Composite Editor requires the flag "enableCellNavigation" to be set to True in your Grid Options.');
